--- a/index.html
+++ b/index.html
@@ -33,9 +33,11 @@
             <a href="#" class="cta">Iscriviti</a>
           </li>
         </ul>
+        <!-- hamburger bar -->
         <a href="#">
           <i class="fas fa-bars"></i>
         </a>
+        <!-- /hamburger bar -->
       </nav>
       <!-- /Nav-menu Desktop-->
       <!-- Nav-menu Mobile-->
@@ -54,9 +56,11 @@
             <a href="#" class="cta">Iscriviti</a>
           </li>
         </ul>
+        <!-- close-menu button -->
         <a href="#" class="close">
           <i class="fas fa-times"></i>
         </a>
+        <!-- /close-menu button -->
       </nav>
       <!-- /Nav-menu Mobile-->
     </header>
